@@ -1,3 +1,8 @@
+2008-07-03  Martin Lambers <marlam@marlam.de>
+
+	* src/dataset_selector.h, src/dataset_selector.cpp, src/cvlview.cpp:
+	Add a SpinBox that allows to jump to specific data sets.
+
 2008-07-02  Martin Lambers <marlam@marlam.de>
 
 	* src/view_area.cpp: Clear the color buffer on initialization and on
